--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "babel-node -- src/index.js",
+    "build": "npm run clean && npm run build-babel",
+    "start": "npm run build && node ./build/index.js",
     "dev": "nodemon --exec babel-node -- src/index.js",
     "seed": "babel-node seed/seed.js",
     "clean": "rm -rf build && mkdir build",
